# Satellite

./: CMakeLists.txt  README.md  Sat animation.py  includes.h  integrator.cpp  integrator.h  main.cpp  satelite.cpp  satelite.h  vec_operations.cpp  vec_operations.h
sat_client/: main.py
sat_thred/: CMakeLists.txt  includes.h  integrator.cpp  integrator.h  main.cpp  satellite.cpp  satellite.h  vec_operations.cpp  vec_operations.h
try_winsock_client/: CMakeLists.txt  main.cpp
try_winsock_serv/: CMakeLists.txt  handle_connections.cpp  handle_connections.h  includes.h  main.cpp
